add support of sftp action

--- a/we-motion-listener.cfg
+++ b/we-motion-listener.cfg
@@ -1,22 +1,15 @@
-[SmtpEmailNotifyAction]
-# GMail account credentials
-name = Your Name
-user = youremail@gmail.com
-password = yourpassword
-sender = youremail@gmail.com
-# Recipient email address (could be same as from_addr)
-recipient = youremail@provider.com
-# Subject line for email
+[SmtpAction]
+name = picamtoucas01
+user = picamtoucas01@gmail.com
+password = D8Pu4xXEkD8mqiN
+sender = picamtoucas01@gmail.com
+recipient = jn.teisseire@gmail.com
 subject = Motion detected
-# First line of email message
 movie_end_message = Video uploaded
 event_started_message = An event has been detected and is being captured. Images are being uploaded to Google Drive.
-# The link to the Google Drive folder that will be included in the email at the start of the event. This is only used in the email - it doesn't affect the upload
-image_and_video_folder_link = https://drive.google.com/a/xxxxxxxxxxx.com/folderview?id=xxxxxxxxxxxxxxxxx&usp=sharing
 
-[EventActionRules]
-#List the actions that should be carried out when an event occurs. Format is ActionClass:always or if_active. When using if_active actions will only be called if the detectors indicate that the system is active
-on_event_start = SmtpEmailNotifyAction:if_active,UrlInvokeAction:always
-on_picture_save = 
-on_movie_end = 
-on_cron_trigger = 
+[SftpAction]
+host = wesoftit.com
+port = 22
+username = thanatren
+remotepath = /home/thanatren/
