adding dummy ssh keys

--- a/we-motion-listener.cfg
+++ b/we-motion-listener.cfg
@@ -1,8 +1,10 @@
+[General]
+log = /var/log/we-motion-listener/we-motion-listener.log
+
 [SmtpAction]
-name = picamtoucas01
-user = picamtoucas01@gmail.com
+name = wemotionlistener
+user = wemotionlistener@gmail.com
 password = D8Pu4xXEkD8mqiN
-sender = picamtoucas01@gmail.com
 recipient = jn.teisseire@gmail.com
 subject = Motion detected
 movie_end_message = Video uploaded
@@ -11,5 +13,6 @@ event_started_message = An event has been detected and is being captured. Images
 [SftpAction]
 host = wesoftit.com
 port = 22
-username = thanatren
-remotepath = /home/thanatren/
+username = wemotionlistener
+remotepath = /home/%(username)s/
+private_key_file = .ssh/id_rsa
