fix config file and get exception

--- a/we-motion-listener.cfg
+++ b/we-motion-listener.cfg
@@ -1,5 +1,6 @@
 [General]
 log = /var/log/we-motion-listener/we-motion-listener.log
+installdir = /etc/we-motion-listener
 
 [SmtpAction]
 name = wemotionlistener
@@ -15,4 +16,4 @@ host = wesoftit.com
 port = 22
 username = wemotionlistener
 remotepath = /home/%(username)s/
-private_key_file = .ssh/id_rsa
+private_key_file = %(installdir)s/.ssh/id_rsa
