remove slow steps from install script

--- a/we-motion-listener.cfg
+++ b/we-motion-listener.cfg
@@ -15,5 +15,5 @@ event_started_message = An event has been detected and is being captured. Images
 host = wesoftit.com
 port = 22
 username = wemotionlistener
-remotepath = /home/%(username)s/
-private_key_file = %(installdir)s/.ssh/id_rsa
+remotepath = /home/wemotionlistener/
+private_key_file = /etc/we-motion-listener/.ssh/id_rsa
