fix config file and get exception

--- a/we-motion-listener.cfg
+++ b/we-motion-listener.cfg
@@ -1,6 +1,5 @@
 [General]
-log = /var/log/we-motion-listener/we-motion-listener.log
-installdir = /etc/we-motion-listener
+log = /var/log/motion/motion.log
 
 [SmtpAction]
 name = wemotionlistener
